--- a/평가서류/nsc9/임장군/노랑풍선/menu.html
+++ b/평가서류/nsc9/임장군/노랑풍선/menu.html
@@ -10,7 +10,7 @@
         padding: 0;
       }
       :root {
-        color: #fff;
+        color: rgba(225, 225, 225, 1);
       }
       ul {
         list-style: none;
@@ -30,8 +30,9 @@
       }
       #menu ul li {
         flex-basis: 11.5%;
-        transition: flex-basis 0.5s;
+        transition: flex-basis 1s;
         border-radius: 15px;
+        position: relative;
       }
       #menu ul li:nth-child(1) {
         background: url(images/bg1.jpg);
@@ -65,7 +66,6 @@
         background: url(images/bg8.jpg);
         background-position: right;
       }
-
       #menu ul:hover li:hover {
         flex-basis: calc(100% - (11.5% * 7));
       }
@@ -96,21 +96,35 @@
       #menu ul:hover li:not(:hover) {
         flex-basis: 10.5%;
       }
+      #menu ul li article {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.2);
+        border-radius: 15px;
+        z-index: 100;
+      }
+      #menu ul li article:hover {
+        background: rgba(0, 0, 0, 0.6);
+      }
       #menu ul li div {
         width: 93%;
         height: 100%;
         display: flex;
         text-align: center;
+        justify-content: center;
+        flex-direction: column;
       }
       #menu ul li div p {
-        align-self: center;
-        margin: 0 auto;
+        color: rgba(225, 225, 225, 1);
+        z-index: 100;
       }
       #menu ul li div p:first-child {
         font-family: "ybfontbold";
         font-size: 24px;
         font-weight: bold;
-        letter-spacing: -1px;
       }
       #menu ul li div p:nth-child(2) {
         font-family: "ybfontmedium";
@@ -138,89 +152,106 @@
     <section id="menu">
       <ul>
         <li>
-          <div>
-            <p>Package</p>
-            <p>
-              전세계 맞춤 패키지여행으로<br />
-              연인, 친구, 가족과 함께 <br />
-              행복한 추억을 만듭니다.
-            </p>
-          </div>
+          <article>
+            <!-- background rgba 주기 위한 부모 -->
+            <div>
+              <p>Package</p>
+              <p>
+                전세계 맞춤 패키지여행으로<br />
+                연인, 친구, 가족과 함께 <br />
+                행복한 추억을 만듭니다.
+              </p>
+            </div>
+          </article>
         </li>
         <li>
-          <div>
-            <p>Honeymoon</p>
-            <p>
-              신혼부부의 취향과 조건에 맞춘 <br />
-              특별한 여행으로<br />
-              낭만적인 순간을 함께합니다.
-            </p>
-          </div>
+          <article>
+            <div>
+              <p>Honeymoon</p>
+              <p>
+                신혼부부의 취향과 조건에 맞춘 <br />
+                특별한 여행으로<br />
+                낭만적인 순간을 함께합니다.
+              </p>
+            </div>
+          </article>
         </li>
         <li>
-          <div>
-            <p>Golf<br />& Theme</p>
-            <p>
-              골프투어, 가족여행, 크루즈여행,
-              <br />
-              휴양여행, 성지순례, 문화탐방 등<br />
-              원하는 테마로 여행할 수 있습니다.
-            </p>
-          </div>
+          <article>
+            <div>
+              <p>Golf<br />& Theme</p>
+              <p>
+                골프투어, 가족여행, 크루즈여행,
+                <br />
+                휴양여행, 성지순례, 문화탐방 등<br />
+                원하는 테마로 여행할 수 있습니다.
+              </p>
+            </div>
+          </article>
         </li>
         <li>
-          <div>
-            <p>Air Ticket</p>
-            <p>
-              세계 주요 도시 및<br />
-              국내 항공 권 예약·발권과
-              <br />
-              단체 그룹 예약까지 가능합니다.
-            </p>
-          </div>
+          <article>
+            <div>
+              <p>Air Ticket</p>
+              <p>
+                세계 주요 도시 및<br />
+                국내 항공 권 예약·발권과
+                <br />
+                단체 그룹 예약까지 가능합니다.
+              </p>
+            </div>
+          </article>
         </li>
         <li>
-          <div>
-            <p>Hotel</p>
-            <p>
-              마음에 맞는 전세계 및 국내 호텔을
-              <br />
-              쉽고 빠르게 예약할 수 있습니다.
-            </p>
-          </div>
+          <article>
+            <div>
+              <p>Hotel</p>
+              <p>
+                마음에 맞는 전세계 및 국내 호텔을
+                <br />
+                쉽고 빠르게 예약할 수 있습니다.
+              </p>
+            </div>
+          </article>
         </li>
         <li>
-          <div>
-            <p>Tour<br />& Ticket</p>
-            <p>
-              배낭여행 및 개별여행을 위한<br />
-              유레일 패스 등 교통권과 현지투어,<br />
-              입장티켓을 예약할 수 있습니다.
-            </p>
-          </div>
+          <article>
+            <div>
+              <p>Tour<br />& Ticket</p>
+              <p>
+                배낭여행 및 개별여행을 위한<br />
+                유레일 패스 등 교통권과 현지투어,<br />
+                입장티켓을 예약할 수 있습니다.
+              </p>
+            </div>
+          </article>
         </li>
         <li>
-          <div>
-            <p>Domestic</p>
-            <p>
-              국내의 문화유적, 제주 패키지,
-              <br />
-              골프 및 렌터카, 특급 호텔 예약을
-              <br />
-              제공합니다.
-            </p>
-          </div>
+          <article>
+            <div>
+              <p>Domestic</p>
+              <p>
+                국내의 문화유적, 제주 패키지,
+                <br />
+                골프 및 렌터카, 특급 호텔 예약을
+                <br />
+                제공합니다.
+              </p>
+            </div>
+          </article>
         </li>
         <li>
-          <div>
-            <p>Incentive</p>
-            <p>
-              국제회의 및 박람회, 기업·단체 연수
-              <br />
-              단체 포상, 대학교, 지역 모임 등<br />
-              인센티브 여행을 함께합니다.
-            </p>
-          </div>
+          <article>
+            <div>
+              <p>Incentive</p>
+              <p>
+                국제회의 및 박람회, 기업·단체 연수
+                <br />
+                단체 포상, 대학교, 지역 모임 등<br />
+                인센티브 여행을 함께합니다.
+              </p>
+            </div>
+          </article>
         </li>
       </ul>
     </section>
