--- a/평가서류/nsc9/임장군/노랑풍선/menu.html
+++ b/평가서류/nsc9/임장군/노랑풍선/menu.html
@@ -9,251 +9,200 @@
         margin: 0;
         padding: 0;
       }
-      :root {
-        color: rgba(225, 225, 225, 1);
-      }
       ul {
         list-style: none;
       }
       a {
         text-decoration: none;
       }
-      #menu {
+      #cnb {
         width: 1480px;
-        height: 500px;
-        margin: 100px auto;
+        margin: 0 auto;
       }
-      #menu ul {
+      #cnb h1 {
+        font-size: 36px;
+        font-family: "ybfontmedium";
+        color: #222;
+        padding: 56px 0;
+        text-align: center;
+      }
+      #cnb ul {
         display: flex;
-        justify-content: space-between;
-        height: 100%;
+        gap: calc(10% / 7);
       }
-      #menu ul li {
-        flex-basis: 11.5%;
-        transition: flex-basis 1s;
-        border-radius: 15px;
+      #cnb ul li {
+        width: calc(93% / 8);
+        height: 500px;
+        border-radius: 12px;
+        color: #fff;
+        /* background-size: cover; */
+        /* 높이가 img 와 동일 */
         position: relative;
+        overflow: hidden;
+        /* border radius 를 주지 않고 overflow hidden 으로 숨김 */
+        transition: 0;
+        transition-timing-function: linear;
       }
-      #menu ul li:nth-child(1) {
+      #cnb ul li:nth-child(1) {
         background: url(images/bg1.jpg);
         background-position: 50%;
       }
-      #menu ul li:nth-child(2) {
+      #cnb ul li:nth-child(2) {
         background: url(images/bg2.jpg);
         background-position: 60%;
       }
-      #menu ul li:nth-child(3) {
+      #cnb ul li:nth-child(3) {
         background: url(images/bg3.jpg);
         background-position: 10%;
       }
-      #menu ul li:nth-child(4) {
+      #cnb ul li:nth-child(4) {
         background: url(images/bg4.jpg);
         background-position: 50%;
       }
-      #menu ul li:nth-child(5) {
+      #cnb ul li:nth-child(5) {
         background: url(images/bg5.jpg);
         background-position: 50%;
       }
-      #menu ul li:nth-child(6) {
+      #cnb ul li:nth-child(6) {
         background: url(images/bg6.jpg);
         background-position: 30%;
       }
-      #menu ul li:nth-child(7) {
+      #cnb ul li:nth-child(7) {
         background: url(images/bg7.jpg);
         background-position: 50%;
       }
-      #menu ul li:nth-child(8) {
+      #cnb ul li:nth-child(8) {
         background: url(images/bg8.jpg);
         background-position: right;
       }
-      #menu ul:hover li:hover {
-        flex-basis: calc(100% - (11.5% * 7));
-      }
-      #menu ul:hover li:nth-child(1):hover {
-        background-position: 50%;
-      }
-      #menu ul:hover li:nth-child(2):hover {
-        background-position: 60%;
-      }
-      #menu ul:hover li:nth-child(3):hover {
-        background-position: 10%;
-      }
-      #menu ul:hover li:nth-child(4):hover {
-        background-position: 50%;
-      }
-      #menu ul:hover li:nth-child(5):hover {
-        background-position: 50%;
-      }
-      #menu ul:hover li:nth-child(6):hover {
-        background-position: 30%;
-      }
-      #menu ul:hover li:nth-child(7):hover {
-        background-position: 50%;
-      }
-      #menu ul:hover li:nth-child(8):hover {
-        background-position: right;
-      }
-      #menu ul:hover li:not(:hover) {
-        flex-basis: 10.5%;
-      }
-      #menu ul li article {
+      #cnb ul li:after {
+        content: "";
         position: absolute;
-        left: 0;
-        top: 0;
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.2);
-        border-radius: 15px;
-        z-index: 100;
+        left: 0;
+        top: 0;
       }
-      #menu ul li article:hover {
-        background: rgba(0, 0, 0, 0.6);
-      }
-      #menu ul li div {
-        width: 93%;
-        height: 100%;
-        display: flex;
+      #cnb ul li p {
         text-align: center;
-        justify-content: center;
-        flex-direction: column;
+        position: relative;
+        z-index: 1;
       }
-      #menu ul li div p {
-        color: rgba(225, 225, 225, 1);
-        z-index: 100;
-      }
-      #menu ul li div p:first-child {
-        font-family: "ybfontbold";
+      #cnb ul li p:first-child {
         font-size: 24px;
         font-weight: bold;
+        position: absolute;
+        top: 47%;
+        transform: translateY(-50%);
+        width: 100%;
+        font-family: "ybfontmebold";
       }
-      #menu ul li div p:nth-child(2) {
-        font-family: "ybfontmedium";
-        font-weight: 800;
+      #cnb ul li p:nth-child(2) {
         font-size: 16px;
-        display: none;
-        letter-spacing: -1.3px;
-        line-height: 28px;
+        position: absolute;
+        width: 100%;
+        opacity: 0;
+        transition: 0s;
+        font-family: "ybfontmedium";
+        letter-spacing: -1px;
+        line-height: 25px;
       }
-      #menu ul:hover li:hover div {
-        width: 97%;
+      #cnb ul:hover li:hover {
+        width: 20%;
+        transition: 0.7s;
       }
-      #menu ul:hover li:not(:hover) div {
-        width: 93%;
+      #cnb ul:hover li {
+        width: 11.5%;
       }
-      #menu ul li:hover div p:first-child {
-        font-size: 36px;
+      #cnb ul:hover li:hover p:first-child {
+        top: 40%;
+        font-size: 32px;
       }
-      #menu ul li:hover p:nth-child(2) {
-        display: block;
+      #cnb ul:hover li:hover p:nth-child(2) {
+        opacity: 1;
+        top: 50%;
+        transition: 0s 0.5s;
+      }
+      #cnb ul:hover li:hover:after {
+        background: rgba(0, 0, 0, 0.6);
       }
     </style>
   </head>
   <body>
-    <section id="menu">
+    <div id="cnb">
+      <h1>노랑풍선이 만드는 여행</h1>
       <ul>
         <li>
-          <article>
-            <!-- background rgba 주기 위한 부모 -->
-            <div>
-              <p>Package</p>
-              <p>
-                전세계 맞춤 패키지여행으로<br />
-                연인, 친구, 가족과 함께 <br />
-                행복한 추억을 만듭니다.
-              </p>
-            </div>
-          </article>
+          <p>Package</p>
+          <p>
+            전세계 맞춤 패키지여행으로<br />
+            연인, 친구, 가족과 함께 <br />
+            행복한 추억을 만듭니다.
+          </p>
         </li>
         <li>
-          <article>
-            <div>
-              <p>Honeymoon</p>
-              <p>
-                신혼부부의 취향과 조건에 맞춘 <br />
-                특별한 여행으로<br />
-                낭만적인 순간을 함께합니다.
-              </p>
-            </div>
-          </article>
+          <p>Honeymoon</p>
+          <p>
+            신혼부부의 취향과 조건에 맞춘 <br />
+            특별한 여행으로<br />
+            낭만적인 순간을 함께합니다.
+          </p>
         </li>
         <li>
-          <article>
-            <div>
-              <p>Golf<br />& Theme</p>
-              <p>
-                골프투어, 가족여행, 크루즈여행,
-                <br />
-                휴양여행, 성지순례, 문화탐방 등<br />
-                원하는 테마로 여행할 수 있습니다.
-              </p>
-            </div>
-          </article>
+          <p>Golf<br />& Theme</p>
+          <p>
+            골프투어, 가족여행, 크루즈여행,
+            <br />
+            휴양여행, 성지순례, 문화탐방 등<br />
+            원하는 테마로 여행할 수 있습니다.
+          </p>
         </li>
         <li>
-          <article>
-            <div>
-              <p>Air Ticket</p>
-              <p>
-                세계 주요 도시 및<br />
-                국내 항공 권 예약·발권과
-                <br />
-                단체 그룹 예약까지 가능합니다.
-              </p>
-            </div>
-          </article>
+          <p>Air Ticket</p>
+          <p>
+            세계 주요 도시 및<br />
+            국내 항공 권 예약·발권과
+            <br />
+            단체 그룹 예약까지 가능합니다.
+          </p>
         </li>
         <li>
-          <article>
-            <div>
-              <p>Hotel</p>
-              <p>
-                마음에 맞는 전세계 및 국내 호텔을
-                <br />
-                쉽고 빠르게 예약할 수 있습니다.
-              </p>
-            </div>
-          </article>
+          <p>Hotel</p>
+          <p>
+            마음에 맞는 전세계 및 국내 호텔을
+            <br />
+            쉽고 빠르게 예약할 수 있습니다.
+          </p>
         </li>
         <li>
-          <article>
-            <div>
-              <p>Tour<br />& Ticket</p>
-              <p>
-                배낭여행 및 개별여행을 위한<br />
-                유레일 패스 등 교통권과 현지투어,<br />
-                입장티켓을 예약할 수 있습니다.
-              </p>
-            </div>
-          </article>
+          <p>Tour<br />& Ticket</p>
+          <p>
+            배낭여행 및 개별여행을 위한<br />
+            유레일 패스 등 교통권과 현지투어,<br />
+            입장티켓을 예약할 수 있습니다.
+          </p>
         </li>
         <li>
-          <article>
-            <div>
-              <p>Domestic</p>
-              <p>
-                국내의 문화유적, 제주 패키지,
-                <br />
-                골프 및 렌터카, 특급 호텔 예약을
-                <br />
-                제공합니다.
-              </p>
-            </div>
-          </article>
+          <p>Domestic</p>
+          <p>
+            국내의 문화유적, 제주 패키지,
+            <br />
+            골프 및 렌터카, 특급 호텔 예약을
+            <br />
+            제공합니다.
+          </p>
         </li>
         <li>
-          <article>
-            <div>
-              <p>Incentive</p>
-              <p>
-                국제회의 및 박람회, 기업·단체 연수
-                <br />
-                단체 포상, 대학교, 지역 모임 등<br />
-                인센티브 여행을 함께합니다.
-              </p>
-            </div>
-          </article>
+          <p>Incentive</p>
+          <p>
+            국제회의 및 박람회, 기업·단체 연수
+            <br />
+            단체 포상, 대학교, 지역 모임 등<br />
+            인센티브 여행을 함께합니다.
+          </p>
         </li>
       </ul>
-    </section>
+    </div>
   </body>
 </html>
