--- a/포트폴리오/메리츠금융그룹/메리츠금융그룹.html
+++ b/포트폴리오/메리츠금융그룹/메리츠금융그룹.html
@@ -117,7 +117,7 @@
         <div class="mainTxtWrap">
           <p class="mainTit">We say growth</p>
           <p class="mainTit">in <span>Numbers.</span></p>
-          <p class="mainTxt mainTxtTop">
+          <p class="mainTxt">
             <strong>메리츠금융그룹</strong>에서 대주주의 1주와 일반주주 1주의
             가치는 동일합니다.<br />모든 주주가 인정하는 투명하고 깨끗한 경영을
             하겠다는 의미입니다.
