--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -11,7 +11,7 @@
       <header>
         <div class="headWrap">
           <div class="headSide">
-            <div class="headInner">
+            <div class="inner">
               <p class="headLogo"></p>
               <div class="sign">
                 <div class="signup">
@@ -24,7 +24,7 @@
             </div>
           </div>
           <div class="headNav">
-            <div class="headInner">
+            <div class="inner">
               <ul class="dep1">
                 <li>
                   <a href="">서비스 소개</a>
@@ -73,11 +73,10 @@
           </div>
         </div>
       </header>
-      <!-- <main>
+      <main>
         <div class="mainWrap">
           <div class="mainPage video">
-            <div class="mainvideo"></div>
-            <div class="mainTxt">
+            <div class="mainTxt mainDark mainTxtMem">
               <p>허스트중앙 통합멤버십으로</p>
               <p>
                 다채로운 매거진 콘텐츠와<br />
@@ -94,8 +93,10 @@
             </div>
           </div>
           <div class="mainPage point">
-            <div class="mainBg"></div>
-            <div class="mainTxt">
+            <div class="mainBg">
+              <p><img src="images/main2.png" alt="mainobj" /></p>
+            </div>
+            <div class="mainTxt mainDark mainTxtMem">
               <p>가입 즉시 축하 포인트 지급</p>
               <p>
                 가입 축하 포인트 받고<br />
@@ -111,8 +112,10 @@
             </div>
           </div>
           <div class="mainPage coupon">
-            <div class="mainBg"></div>
-            <div class="mainTxt">
+            <div class="mainBg">
+              <p><img src="images/main3.png" alt="mainobj" /></p>
+            </div>
+            <div class="mainTxt mainDark mainTxtMem">
               <p>차곡차곡 쌓은 포인트는</p>
               <p>
                 포인트 전환하고<br />
@@ -128,15 +131,17 @@
             </div>
           </div>
           <div class="mainPage whiteBg">
-            <div class="mainTxt">
+            <div class="mainTxt mainTxtPage">
               <p>지금 바로 만나보세요!</p>
               <p>허스트중앙의 다양한 미디어 서비스</p>
             </div>
           </div>
           <div class="mainPage elle">
-            <div class="mainBg"></div>
-            <div class="mainTxt">
-              <p><img src="" alt="" /></p>
+            <div class="mainBg">
+              <p><img src="images/main5.png" alt="mainobj" /></p>
+            </div>
+            <div class="mainTxt mainBright mainTxtBrand">
+              <p><img src="images/ellelogo.svg" alt="ellelogo" /></p>
               <p>NO.1 FASHION & LIFESTYLE MEDIA</p>
               <p>
                 글로벌 2,100만 독자와 함께<br />
@@ -148,9 +153,13 @@
             </div>
           </div>
           <div class="mainPage cosmopolitan">
-            <div class="mainBg"></div>
-            <div class="mainTxt">
-              <p><img src="" alt="" /></p>
+            <div class="mainBg">
+              <p><img src="images/main6.png" alt="mainobj" /></p>
+            </div>
+            <div class="mainTxt mainDark mainTxtBrand">
+              <p>
+                <img src="images/cosmopolitanlogo.svg" alt="cosmopolitanlogo" />
+              </p>
               <p>FUN, FEARLESS, FEMALE</p>
               <p>
                 국내 최대 판매 부수와 높은 정기구독률을 자랑하는<br />
@@ -162,9 +171,11 @@
             </div>
           </div>
           <div class="mainPage bazzar">
-            <div class="mainBg"></div>
-            <div class="mainTxt">
-              <p><img src="" alt="" /></p>
+            <div class="mainBg">
+              <p><img src="images/main7.png" alt="mainobj" /></p>
+            </div>
+            <div class="mainTxt mainDark mainTxtBrand">
+              <p><img src="images/bazzarlogo.svg" alt="bazzarlogo" /></p>
               <p>FIRST IN FASHION</p>
               <p>
                 현대 여성의 문화와 라이프스타일에<br />
@@ -176,41 +187,52 @@
             </div>
           </div>
           <div class="mainPage esquire">
-            <div class="mainBg"></div>
-            <div class="mainTxt">
-              <p><img src="" alt="" /></p>
+            <div class="mainBg">
+              <p><img src="images/main8.png" alt="mainobj" /></p>
+            </div>
+            <div class="mainTxt mainDark mainTxtBrand">
+              <p><img src="images/esquirelogo.svg" alt="esquirelogo" /></p>
               <p>MAN AT HIS BEST</p>
-              <p>취향이 남다른 남자들을 위한 지적인 바이블</p>
+              <p>
+                취향이 남다른 남자들을 위한<br />
+                지적인 바이블
+              </p>
               <div class="mainLink">
                 <a href=""><span>바로가기</span></a>
               </div>
             </div>
           </div>
           <div class="mainPage whiteBg">
-            <div class="mainTxt">
+            <div class="mainTxt mainTxtPage">
               <p>다채롭게 경험해보세요</p>
               <p>개인 취향에 맞춘 테마별 서비스</p>
             </div>
           </div>
           <div class="mainPage ellevoice">
-            <div class="mainTxt">
-              <p>엘르보이스</p>
-              <p>
-                여성의 삶,<br />
-                레퍼런스가 필요할 때
-              </p>
-              <p>
-                작가, 북튜버, 아나운서, 기자 싱어송라이터까지!<br />
-                동시대를 살아가는 여성들의 에세이 뉴스레터를 구독해보세요.
-              </p>
-              <div class="mainLink">
-                <a href=""><span>바로가기</span></a>
+            <div class="mainTxt mainBright mainTxtApp">
+              <div class="voiceTxtWrap">
+                <div>
+                  <p>엘르보이스</p>
+                  <p>
+                    여성의 삶,<br />
+                    레퍼런스가 필요할 때
+                  </p>
+                  <p>
+                    작가, 북튜버, 아나운서, 기자 싱어송라이터까지!<br />
+                    동시대를 살아가는 여성들의 에세이 뉴스레터를 구독해보세요.
+                  </p>
+                </div>
+                <div class="mainLink">
+                  <a href=""><span>바로가기</span></a>
+                </div>
               </div>
+              <picture
+                ><img src="images/main10mob.png" alt="mainobj"
+              /></picture>
             </div>
-            <div class="mainImg"></div>
           </div>
           <div class="mainPage artwalk">
-            <div class="mainTxt">
+            <div class="mainTxt mainDark mainTxtApp">
               <p>예술산책</p>
               <p>
                 ‘예술'을 ‘산책'하듯 가볍게 즐기는<br />
@@ -227,7 +249,7 @@
             <div class="mainImg"></div>
           </div>
           <div class="mainPage eee">
-            <div class="mainTxt">
+            <div class="mainTxt mainBright mainTxtApp">
               <p>eee</p>
               <p>
                 에스콰이어 에디터가<br />
@@ -323,7 +345,7 @@
             </div>
           </div>
         </nav>
-      </main> -->
+      </main>
     </div>
   </body>
 </html>
