--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -94,13 +94,14 @@
           </div>
           <div class="mainPage point">
             <div class="mainBg">
-              <p><img src="images/main2.png" alt="mainobj" /></p>
+              <p><img src="images/pointpc.png" alt="mainobj" /></p>
             </div>
             <div class="mainTxt mainDark mainTxtMem">
               <p>가입 즉시 축하 포인트 지급</p>
               <p>
                 가입 축하 포인트 받고<br />
-                콘텐츠 읽고 포인트도 모아요!
+                콘텐츠 읽고<br class="brpc" />
+                포인트도 모아요!
               </p>
               <p>
                 가입 후에는 매일 기사를 읽을 때마다 포인트 적립<br />
@@ -113,7 +114,7 @@
           </div>
           <div class="mainPage coupon">
             <div class="mainBg">
-              <p><img src="images/main3.png" alt="mainobj" /></p>
+              <p><img src="images/couponpc.png" alt="mainobj" /></p>
             </div>
             <div class="mainTxt mainDark mainTxtMem">
               <p>차곡차곡 쌓은 포인트는</p>
@@ -138,7 +139,7 @@
           </div>
           <div class="mainPage elle">
             <div class="mainBg">
-              <p><img src="images/main5.png" alt="mainobj" /></p>
+              <p><img src="images/ellepc.png" alt="mainobj" /></p>
             </div>
             <div class="mainTxt mainBright mainTxtBrand">
               <p><img src="images/ellelogo.svg" alt="ellelogo" /></p>
@@ -154,7 +155,7 @@
           </div>
           <div class="mainPage cosmopolitan">
             <div class="mainBg">
-              <p><img src="images/main6.png" alt="mainobj" /></p>
+              <p><img src="images/cosmopolitanpc.png" alt="mainobj" /></p>
             </div>
             <div class="mainTxt mainDark mainTxtBrand">
               <p>
@@ -175,7 +176,7 @@
               <p><img src="images/main7.png" alt="mainobj" /></p>
             </div>
             <div class="mainTxt mainDark mainTxtBrand">
-              <p><img src="images/bazzarlogo.svg" alt="bazzarlogo" /></p>
+              <p><img src="images/bazzarpc.png" alt="bazzarlogo" /></p>
               <p>FIRST IN FASHION</p>
               <p>
                 현대 여성의 문화와 라이프스타일에<br />
@@ -188,7 +189,7 @@
           </div>
           <div class="mainPage esquire">
             <div class="mainBg">
-              <p><img src="images/main8.png" alt="mainobj" /></p>
+              <p><img src="images/esquirepc.png" alt="mainobj" /></p>
             </div>
             <div class="mainTxt mainDark mainTxtBrand">
               <p><img src="images/esquirelogo.svg" alt="esquirelogo" /></p>
@@ -210,7 +211,7 @@
           </div>
           <div class="mainPage ellevoice">
             <div class="mainTxt mainBright mainTxtApp">
-              <div class="voiceTxtWrap">
+              <div class="appTxtWrap">
                 <div>
                   <p>엘르보이스</p>
                   <p>
@@ -227,26 +228,27 @@
                 </div>
               </div>
               <picture
-                ><img src="images/main10mob.png" alt="mainobj"
+                ><img src="images/ellevoicepc.png" alt="mainobj"
               /></picture>
             </div>
           </div>
           <div class="mainPage artwalk">
             <div class="mainTxt mainDark mainTxtApp">
-              <p>예술산책</p>
-              <p>
-                ‘예술'을 ‘산책'하듯 가볍게 즐기는<br />
-                아트 큐레이션 서비스
-              </p>
-              <p>
-                지금 국내의 아트신에서 펼쳐지고 있는 주요 전시와 이슈들을
-                확인해보세요!
-              </p>
+              <div class="appTxtWrap">
+                <p>예술산책</p>
+                <p>
+                  ‘예술'을 ‘산책'하듯 가볍게 즐기는<br />
+                  아트 큐레이션 서비스
+                </p>
+                <p>
+                  지금 국내의 아트신에서 펼쳐지고 있는 주요 전시와 이슈들을
+                  확인해보세요!
+                </p>
+              </div>
               <div class="mainLink">
                 <a href=""><span>바로가기</span></a>
               </div>
             </div>
-            <div class="mainImg"></div>
           </div>
           <div class="mainPage eee">
             <div class="mainTxt mainBright mainTxtApp">
