--- a/반응형/0806_indigo.html
+++ b/반응형/0806_indigo.html
@@ -117,6 +117,7 @@
         position: relative;
         width: 100%;
         height: 100%;
+        overflow: hidden;
       }
       .work ul li:hover a::before {
         content: "";
