--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -76,7 +76,7 @@
       <main>
         <div class="mainWrap">
           <div class="mainPage video">
-            <div class="mainTxt mainDark mainTxtMem">
+            <div class="mainTxt mainBright mainTxtMem">
               <p>허스트중앙 통합멤버십으로</p>
               <p>
                 다채로운 매거진 콘텐츠와<br />
@@ -173,10 +173,10 @@
           </div>
           <div class="mainPage bazzar">
             <div class="mainBg">
-              <p><img src="images/main7.png" alt="mainobj" /></p>
+              <p><img src="images/bazzarpc.png" alt="mainobj" /></p>
             </div>
             <div class="mainTxt mainDark mainTxtBrand">
-              <p><img src="images/bazzarpc.png" alt="bazzarlogo" /></p>
+              <p><img src="images/bazzarlogo.svg" alt="bazzarlogo" /></p>
               <p>FIRST IN FASHION</p>
               <p>
                 현대 여성의 문화와 라이프스타일에<br />
@@ -235,36 +235,46 @@
           <div class="mainPage artwalk">
             <div class="mainTxt mainDark mainTxtApp">
               <div class="appTxtWrap">
-                <p>예술산책</p>
-                <p>
-                  ‘예술'을 ‘산책'하듯 가볍게 즐기는<br />
-                  아트 큐레이션 서비스
-                </p>
-                <p>
-                  지금 국내의 아트신에서 펼쳐지고 있는 주요 전시와 이슈들을
-                  확인해보세요!
-                </p>
+                <div>
+                  <p>예술산책</p>
+                  <p>
+                    ‘예술'을 ‘산책'하듯 가볍게 즐기는<br />
+                    아트 큐레이션 서비스
+                  </p>
+                  <p>
+                    지금 국내의 아트신에서 펼쳐지고 있는<br />
+                    주요 전시와 이슈들을 확인해보세요!
+                  </p>
+                </div>
+                <div class="mainLink">
+                  <a href=""><span>바로가기</span></a>
+                </div>
               </div>
-              <div class="mainLink">
-                <a href=""><span>바로가기</span></a>
-              </div>
+              <picture
+                ><img src="images/artwalkpc.png" alt="mainobj"
+              /></picture>
             </div>
           </div>
           <div class="mainPage eee">
             <div class="mainTxt mainBright mainTxtApp">
-              <p>eee</p>
-              <p>
-                에스콰이어 에디터가<br />
-                기록하는 핫플 수첩
-              </p>
-              <p>
-                맛집부터 카페, 여행, 노포까지<br />
-                에디터의 시각으로 수집한 공간에서<br />
-                나만의 취향을 발견해보세요.
-              </p>
-              <div class="mainLink">
-                <a href=""><span>바로가기</span></a>
+              <div class="appTxtWrap">
+                <div>
+                  <p>eee</p>
+                  <p>
+                    에스콰이어 에디터가<br />
+                    기록하는 핫플 수첩
+                  </p>
+                  <p>
+                    맛집부터 카페, 여행, 노포까지<br />
+                    에디터의 시각으로 수집한 공간에서<br />
+                    나만의 취향을 발견해보세요.
+                  </p>
+                </div>
+                <div class="mainLink">
+                  <a href=""><span>바로가기</span></a>
+                </div>
               </div>
+              <picture><img src="images/eeepc.png" alt="mainobj" /></picture>
             </div>
             <div class="mainImg"></div>
           </div>
