--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="허스트중앙main.css" />
   </head>
   <body>
-    <div id="mainPage">
+    <div id="mainWrap">
       <header>
         <div class="head">
           <div class="headLogo"></div>
@@ -61,7 +61,7 @@
         </div>
       </header>
       <main>
-        <div class="mainPage memPage video">
+        <div class="mainPage darkPage memPage video">
           <div class="txt">
             <p>허스트중앙 통합멤버십으로</p>
             <p>
@@ -79,8 +79,8 @@
             </div>
           </div>
         </div>
-        <div class="mainPage memPage point">
-          <div class="Obj">
+        <div class="mainPage darkPage memPage point">
+          <div class="obj">
             <p><img src="images/pointpc.png" alt="mainobj" /></p>
           </div>
           <div class="txt">
@@ -99,8 +99,8 @@
             </div>
           </div>
         </div>
-        <div class="mainPage memPage coupon">
-          <div class="Obj">
+        <div class="mainPage darkPage memPage coupon">
+          <div class="obj">
             <p><img src="images/couponpc.png" alt="mainobj" /></p>
           </div>
           <div class="txt">
@@ -118,14 +118,14 @@
             </div>
           </div>
         </div>
-        <div class="mainPage whiteBg">
+        <div class="mainPage brightPage whiteBg">
           <div class="txt">
             <p>지금 바로 만나보세요!</p>
             <p>허스트중앙의 다양한 미디어 서비스</p>
           </div>
         </div>
-        <div class="mainPage brandPage elle">
-          <div class="Obj">
+        <div class="mainPage brightPage brandPage elle">
+          <div class="obj">
             <p><img src="images/ellepc.png" alt="mainobj" /></p>
           </div>
           <div class="txt">
@@ -140,8 +140,8 @@
             </div>
           </div>
         </div>
-        <div class="mainPage brandPage cosmopolitan">
-          <div class="Obj">
+        <div class="mainPage darkPage brandPage cosmopolitan">
+          <div class="obj">
             <p><img src="images/cosmopolitanpc.png" alt="mainobj" /></p>
           </div>
           <div class="txt">
@@ -158,8 +158,8 @@
             </div>
           </div>
         </div>
-        <div class="mainPage brandPage bazzar">
-          <div class="Obj">
+        <div class="mainPage darkPage brandPage bazzar">
+          <div class="obj">
             <p><img src="images/bazzarpc.png" alt="mainobj" /></p>
           </div>
           <div class="txt">
@@ -174,8 +174,8 @@
             </div>
           </div>
         </div>
-        <div class="mainPage brandPage esquire">
-          <div class="Obj">
+        <div class="mainPage darkPage brandPage esquire">
+          <div class="obj">
             <p><img src="images/esquirepc.png" alt="mainobj" /></p>
           </div>
           <div class="txt">
@@ -190,13 +190,13 @@
             </div>
           </div>
         </div>
-        <div class="mainPage whiteBg">
+        <div class="mainPage brightPage whiteBg">
           <div class="txt">
             <p>다채롭게 경험해보세요</p>
             <p>개인 취향에 맞춘 테마별 서비스</p>
           </div>
         </div>
-        <div class="mainPage appPage ellevoice">
+        <div class="mainPage brightPage appPage ellevoice">
           <div class="txt">
             <p>엘르보이스</p>
             <p>
@@ -216,7 +216,7 @@
             <img src="images/ellevoicepc.png" alt="mainpic" />
           </picture>
         </div>
-        <div class="mainPage appPage artwalk">
+        <div class="mainPage darkPage appPage artwalk">
           <div class="txt">
             <p>예술산책</p>
             <p>
@@ -235,7 +235,7 @@
             <img src="images/artwalkpc.png" alt="mainpic" />
           </picture>
         </div>
-        <div class="mainPage appPage eee">
+        <div class="mainPage brightPage appPage eee">
           <div class="txt">
             <p>eee</p>
             <p>
