--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -87,7 +87,7 @@
             <p>가입 즉시 축하 포인트 지급</p>
             <p>
               가입 축하 포인트 받고<br />
-              콘텐츠 읽고<br class="pc" />
+              콘텐츠 읽고<br class="mob" />
               포인트도 모아요!
             </p>
             <p>
@@ -197,139 +197,115 @@
           </div>
         </div>
         <div class="mainPage brightPage appPage ellevoice">
-          <div class="txt">
-            <p>엘르보이스</p>
-            <p>
-              여성의 삶,<br />
-              레퍼런스가 필요할 때
-            </p>
-            <p>
-              작가, 북튜버, 아나운서, 기자 싱어송라이터까지!<br />
-              동시대를 살아가는 여성들의 에세이<br class="mob" />
-              뉴스레터를 구독해보세요.
-            </p>
-            <div class="mainLink">
-              <a href=""><span>바로가기</span></a>
+          <div class="appWrap">
+            <div class="txt">
+              <p>엘르보이스</p>
+              <p>
+                여성의 삶,<br />
+                레퍼런스가 필요할 때
+              </p>
+              <p>
+                작가, 북튜버, 아나운서, 기자 싱어송라이터까지!<br />
+                동시대를 살아가는 여성들의 에세이<br class="mob" />
+                뉴스레터를 구독해보세요.
+              </p>
+              <div class="mainLink">
+                <a href=""><span>바로가기</span></a>
+              </div>
             </div>
+            <picture>
+              <img src="images/ellevoicepc.png" alt="mainpic" />
+            </picture>
           </div>
-          <picture>
-            <img src="images/ellevoicepc.png" alt="mainpic" />
-          </picture>
         </div>
         <div class="mainPage darkPage appPage artwalk">
-          <div class="txt">
-            <p>예술산책</p>
-            <p>
-              ‘예술'을 ‘산책'하듯 가볍게 즐기는<br />
-              아트 큐레이션 서비스
-            </p>
-            <p>
-              지금 국내의 아트신에서 펼쳐지고 있는<br />
-              주요 전시와 이슈들을 확인해보세요!
-            </p>
-            <div class="mainLink">
-              <a href=""><span>바로가기</span></a>
+          <div class="appWrap">
+            <div class="txt">
+              <p>예술산책</p>
+              <p>
+                ‘예술'을 ‘산책'하듯 가볍게 즐기는<br />
+                아트 큐레이션 서비스
+              </p>
+              <p>
+                지금 국내의 아트신에서 펼쳐지고 있는<br />
+                주요 전시와 이슈들을 확인해보세요!
+              </p>
+              <div class="mainLink">
+                <a href=""><span>바로가기</span></a>
+              </div>
             </div>
+            <picture>
+              <img src="images/artwalkpc.png" alt="mainpic" />
+            </picture>
           </div>
-          <picture>
-            <img src="images/artwalkpc.png" alt="mainpic" />
-          </picture>
         </div>
         <div class="mainPage brightPage appPage eee">
-          <div class="txt">
-            <p>eee</p>
-            <p>
-              에스콰이어 에디터가<br />
-              기록하는 핫플 수첩
-            </p>
-            <p>
-              맛집부터 카페, 여행, 노포까지<br />
-              에디터의 시각으로 수집한 공간에서<br />
-              나만의 취향을 발견해보세요.
-            </p>
-            <div class="mainLink">
-              <a href=""><span>바로가기</span></a>
+          <div class="appWrap">
+            <div class="txt">
+              <p>eee</p>
+              <p>
+                에스콰이어 에디터가<br />
+                기록하는 핫플 수첩
+              </p>
+              <p>
+                맛집부터 카페, 여행, 노포까지<br />
+                에디터의 시각으로 수집한 공간에서<br />
+                나만의 취향을 발견해보세요.
+              </p>
+              <div class="mainLink">
+                <a href=""><span>바로가기</span></a>
+              </div>
+            </div>
+            <picture>
+              <img src="images/eeepc.png" alt="mainpic" />
+            </picture>
+          </div>
+        </div>
+        <footer>
+          <div class="foot">
+            <ul class="footTop">
+              <li><a href="">이용약관</a></li>
+              <li><a href="">개인정보처리방침</a></li>
+              <li><a href="">이메일무단수집금지</a></li>
+              <li><a href="">윤리경영</a></li>
+            </ul>
+            <div class="footBot">
+              <address>
+                <span>허스트중앙(유)</span>
+                <span>서울시 강남구 도산대로 156(논현동)</span>
+                <span>대표자 : 강주연</span><br />
+              </address>
+              <address>
+                <span>사업자등록번호 : 104-81-55280</span>
+                <span>통신판매업신고 : 제 2014-서울강남-00333호</span>
+              </address>
+              <p class="copyright">
+                © 2024 Hearst Joongang. All Rights Reserved.
+              </p>
             </div>
           </div>
-          <picture>
-            <img src="images/eeepc.png" alt="mainpic" />
-          </picture>
-        </div>
+        </footer>
       </main>
-      <footer>
-        <ul class="footTop">
-          <li><a href="">이용약관</a></li>
-          <li><a href="">개인정보처리방침</a></li>
-          <li><a href="">이메일무단수집금지</a></li>
-          <li><a href="">윤리경영</a></li>
-        </ul>
-        <div class="footBot">
-          <address>
-            <span>허스트중앙(유)</span>
-            <span>서울시 강남구 도산대로 156(논현동)</span>
-            <span>대표자 : 강주연</span><br />
-            <span>사업자등록번호 : 104-81-55280</span>
-            <span>통신판매업신고 : 제 2014-서울강남-00333호</span>
-          </address>
-          <p class="copyright">© 2024 Hearst Joongang. All Rights Reserved.</p>
+      <div class="floatingNav">
+        <div>
+          <ul>
+            <li><a href="">회사소개</a></li>
+            <li><a href="">ELLE</a></li>
+            <li><a href="">cosmopolitan</a></li>
+            <li><a href="">Harper's BAZZAR</a></li>
+            <li><a href="">Esquire</a></li>
+            <li><a href="">엘르보이스</a></li>
+            <li><a href="">예술산책</a></li>
+            <li><a href="">eee</a></li>
+          </ul>
         </div>
-      </footer>
-      <nav>
-        <div class="inputWrap">
-          <input type="radio" name="floatnav" id="float1" />
-          <input type="radio" name="floatnav" id="float2" />
-          <input type="radio" name="floatnav" id="float3" />
-          <input type="radio" name="floatnav" id="float4" />
-          <input type="radio" name="floatnav" id="float5" />
-          <input type="radio" name="floatnav" id="float6" />
-          <input type="radio" name="floatnav" id="float7" />
-          <input type="radio" name="floatnav" id="float8" />
-          <div class="floatnav">
-            <ul>
-              <li>
-                <label for="float1">
-                  <p>회사소개</p>
-                </label>
-              </li>
-              <li>
-                <label for="float2">
-                  <p>ELLE</p>
-                </label>
-              </li>
-              <li>
-                <label for="float3">
-                  <p>Cosmopolitan</p>
-                </label>
-              </li>
-              <li>
-                <label for="float4">
-                  <p>Harper's BAZZAR</p>
-                </label>
-              </li>
-              <li>
-                <label for="float5">
-                  <p>Esquire</p>
-                </label>
-              </li>
-              <li>
-                <label for="float6">
-                  <p>엘르보이스</p>
-                </label>
-              </li>
-              <li>
-                <label for="float7">
-                  <p>예술산책</p>
-                </label>
-              </li>
-              <li>
-                <label for="float8">
-                  <p>eee</p>
-                </label>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        <input type="checkbox" id="floatingNav" />
+        <p>
+          <label for="floatingNav"
+            ><img src="images/floatingnav+.png" alt="floatingnav"
+          /></label>
+        </p>
+      </div>
     </div>
   </body>
 </html>
