--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -62,6 +62,15 @@
       </header>
       <main>
         <div class="mainPage darkPage memPage video">
+          <div class="video">
+            <video
+              autoplay
+              muted
+              loop
+              src="https://www.hjmembers.co.kr/resources/videos/main/key-visual.mp4?autoplay=1&amp;loop=1&amp;title=0&amp;background=1"
+              type="video/mp4"
+            ></video>
+          </div>
           <div class="txt">
             <p>허스트중앙 통합멤버십으로</p>
             <p>
@@ -286,26 +295,22 @@
           </div>
         </footer>
       </main>
-      <div class="floatingNav">
-        <div>
-          <ul>
-            <li><a href="">회사소개</a></li>
-            <li><a href="">ELLE</a></li>
-            <li><a href="">cosmopolitan</a></li>
-            <li><a href="">Harper's BAZZAR</a></li>
-            <li><a href="">Esquire</a></li>
-            <li><a href="">엘르보이스</a></li>
-            <li><a href="">예술산책</a></li>
-            <li><a href="">eee</a></li>
-          </ul>
-        </div>
-        <input type="checkbox" id="floatingNav" />
-        <p>
-          <label for="floatingNav"
-            ><img src="images/floatingnav+.png" alt="floatingnav"
-          /></label>
-        </p>
-      </div>
+      <!-- <div class="floatingNav">
+        <ul class="navBar">
+          <li><a href="">회사소개</a></li>
+          <li><a href="">ELLE</a></li>
+          <li><a href="">Cosmopolitan</a></li>
+          <li><a href="">Harper's BAZZAR</a></li>
+          <li><a href="">Esquire</a></li>
+          <li><a href="">엘르보이스</a></li>
+          <li><a href="">예술산책</a></li>
+          <li><a href="">eee</a></li>
+        </ul>
+        <input type="radio" name="radio" id="float" />
+        <label for="float"
+          ><img src="images/floatingnav+.png" alt="floatimg"
+        /></label>
+      </div> -->
     </div>
   </body>
 </html>
