--- a/개인/허스트중앙 통합멤버십/허스트중앙main.html
+++ b/개인/허스트중앙 통합멤버십/허스트중앙main.html
@@ -62,12 +62,21 @@
       </header>
       <main>
         <div class="mainPage darkPage memPage video">
-          <div class="video">
+          <div class="videoPc">
             <video
               autoplay
               muted
               loop
               src="https://www.hjmembers.co.kr/resources/videos/main/key-visual.mp4?autoplay=1&amp;loop=1&amp;title=0&amp;background=1"
+              type="video/mp4"
+            ></video>
+          </div>
+          <div class="videoMob">
+            <video
+              autoplay
+              muted
+              loop
+              src="https://www.hjmembers.co.kr/resources/videos/main/key-visual-mo.mp4?autoplay=1&amp;loop=1&amp;title=0&amp;background=1"
               type="video/mp4"
             ></video>
           </div>
@@ -106,6 +115,34 @@
             <div class="mainLink">
               <a href=""><span>매거진 보러가기</span></a>
             </div>
+          </div>
+          <div class="mobObj">
+            <ul class="slide">
+              <li>
+                <p><img src="images/pointmobobj1.png" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/pointmobobj2.png" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/pointmobobj3.png" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/pointmobobj4.png" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/pointmobobj1.png" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/pointmobobj2.png" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/pointmobobj3.png" alt="pointmobobj" /></p>
+              </li>
+              <li>
+                <p><img src="images/pointmobobj4.png" alt="pointmobobj" /></p>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="mainPage darkPage memPage coupon">
@@ -201,7 +238,10 @@
         </div>
         <div class="mainPage brightPage whiteBg">
           <div class="txt">
-            <p>다채롭게 경험해보세요</p>
+            <p>
+              다채롭게<br class="mob" />
+              경험해보세요
+            </p>
             <p>개인 취향에 맞춘 테마별 서비스</p>
           </div>
         </div>
@@ -222,8 +262,11 @@
                 <a href=""><span>바로가기</span></a>
               </div>
             </div>
-            <picture>
-              <img src="images/ellevoicepc.png" alt="mainpic" />
+            <picture class="appPagePc">
+              <img src="images/ellevoicepc.png" alt="apppc" />
+            </picture>
+            <picture class="appPageMob">
+              <img src="images/ellevoicemob.png" alt="appmob" />
             </picture>
           </div>
         </div>
@@ -243,8 +286,11 @@
                 <a href=""><span>바로가기</span></a>
               </div>
             </div>
-            <picture>
-              <img src="images/artwalkpc.png" alt="mainpic" />
+            <picture class="appPagePc">
+              <img src="images/artwalkpc.png" alt="apppc" />
+            </picture>
+            <picture class="appPageMob">
+              <img src="images/artwalkmob.png" alt="appmob" />
             </picture>
           </div>
         </div>
@@ -265,8 +311,11 @@
                 <a href=""><span>바로가기</span></a>
               </div>
             </div>
-            <picture>
-              <img src="images/eeepc.png" alt="mainpic" />
+            <picture class="appPagePc">
+              <img src="images/eeepc.png" alt="apppc" />
+            </picture>
+            <picture class="appPageMob">
+              <img src="images/eeemob.png" alt="appmob" />
             </picture>
           </div>
         </div>
